tests/baselines/reference/pathsValidation5.errors.txt
tsconfig.json(5,26): error TS5090: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
tsconfig.json(6,19): error TS5090: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
tsconfig.json(7,23): error TS5090: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
src/main.ts(1,8): error TS2882: Cannot find module or type declarations for side-effect import of 'someModule'.


==== tsconfig.json (3 errors) ====
    {
      "compilerOptions": {
          "traceResolution": true,
          "paths": {
            "@interface/*": ["src/interface/*"],
                             ~~~~~~~~~~~~~~~~~
!!! error TS5090: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
            "@blah": ["blah"],
                      ~~~~~~
!!! error TS5090: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
            "@humbug/*": ["*/generated"]
                          ~~~~~~~~~~~~~
!!! error TS5090: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
          }
      }
    }
    
==== src/main.ts (1 errors) ====
    import 'someModule';
           ~~~~~~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of 'someModule'.